# stm32h750-flight-control

./: .gitignore  CMakeLists.txt  README.md
boards/stm32h743/: CMakeLists.txt  README.md  startup_stm32h743xx.s  stm32h743xx_flash.ld  toolchain-arm-none-eabi.cmake
boards/stm32h743/drivers/real/: README.md
boards/stm32h743/drivers/stub/: stub_board_drivers.cpp
boards/stm32h743/include/: FreeRTOSConfig.h  board_io.hpp
boards/stm32h743/src/: board_hooks.cpp  syscalls.cpp  system_stm32h743.cpp
helloagents/: CHANGELOG.md  INDEX.md  context.md
helloagents/modules/: _index.md  flight_control_stack.md
include/flight_control/: config.hpp
include/flight_control/app/: flight_application.hpp
include/flight_control/control/: speed_controller.hpp  torque_controller.hpp
include/flight_control/data/: flight_types.hpp  history_window.hpp
include/flight_control/estimation/: state_estimator.hpp
include/flight_control/eval/: closed_loop_evaluator.hpp  simulation_runner.hpp
include/flight_control/interfaces/: flight_interfaces.hpp
include/flight_control/math/: vector_quaternion.hpp
include/flight_control/model/: adaptive_tcn_policy.hpp  attitude_policy.hpp  generated_policy.hpp  model_adapter.hpp  static_mlp_policy.hpp
include/flight_control/platform/freertos/: freertos_task_runner.hpp
include/flight_control/platform/host/: host_environment.hpp  host_synchronization.hpp  simulated_components.hpp  thread_task_runner.hpp
include/flight_control/platform/stm32/: stm32_flight_port.hpp
include/flight_control/runtime/: synchronization.hpp  task_runner.hpp
output/: flight_evaluation_metrics.csv  flight_evaluation_report.md
src/: evaluate.cpp  main.cpp
src/app/: flight_application.cpp
src/control/: speed_controller.cpp  torque_controller.cpp
src/data/: history_window.cpp
src/estimation/: state_estimator.cpp
src/eval/: closed_loop_evaluator.cpp  simulation_runner.cpp
src/host/: main.cpp
src/model/: adaptive_tcn_policy.cpp  generated_policy.cpp  model_adapter.cpp  static_mlp_policy.cpp
src/platform/freertos/: freertos_task_runner.cpp
src/platform/host/: host_environment.cpp  host_synchronization.cpp  simulated_components.cpp  thread_task_runner.cpp
src/platform/stm32/: stm32_board_hooks_weak.cpp  stm32_flight_port.cpp
src/runtime/: synchronization.cpp  task_runner.cpp
tests/: firmware_boundary_tests.cpp  flight_control_tests.cpp  system_eval_tests.cpp
tools/: export_linear_policy.py  policy_search.cpp  static_policy_params.txt
